// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Guage renders 1`] = `
<Memo(CanvasGaugeChart)
  chartTitle=""
  chartValue={0}
  height={-1}
  maxValue={0}
  minValue={0}
  segments={
    Array [
      Object {
        "color": "#e3008c",
        "id": "1",
        "key": "item1",
        "legend": "Item 1",
        "size": 20,
      },
      Object {
        "color": "#57811b",
        "id": "1",
        "key": "item1_2",
        "legend": "Item 1",
        "size": 20,
      },
    ]
  }
  sublabel=""
  themeJSON=""
  width={-1}
/>
`;

exports[`Guage renders dummy items when no items configured 1`] = `
<Memo(CanvasGaugeChart)
  chartTitle=""
  chartValue={0}
  height={-1}
  maxValue={0}
  minValue={0}
  segments={
    Array [
      Object {
        "color": "#3a96dd",
        "id": "First",
        "key": "First",
        "legend": "First",
        "size": 30,
      },
      Object {
        "color": "#ad006a",
        "id": "Second",
        "key": "Second",
        "legend": "Second",
        "size": 30,
      },
      Object {
        "color": "#405f14",
        "id": "Third",
        "key": "Third",
        "legend": "Third",
        "size": 30,
      },
    ]
  }
  sublabel=""
  themeJSON=""
  width={-1}
/>
`;
